feat: Added decodeOutputIndexes decoding of output indexes from VarInts